--- a/css/timer.css
+++ b/css/timer.css
@@ -51,7 +51,7 @@
   font-size: 48px;
 }
 #app{
-  margin-top: 100px;
+  margin-top: 30px;
   justify-content: center;
   display: flex;
 }
@@ -61,4 +61,11 @@
   align-items: center;
   display: flex;
   text-align: center;
+}
+
+#stopText{
+  font-size: 500px;
+  color: red;
+  text-align: center;
+  font-weight: italic;
 }
